# QtCamera

./: CMakeLists.txt
include/: camera.hpp  images.hpp  video_surface.hpp
qml/: main.qml
src/: camera.cpp  main.cpp  video_surface.cpp
